play the audio by rode

--- a/audio_play/CMakeLists.txt
+++ b/audio_play/CMakeLists.txt
@@ -13,11 +13,15 @@ include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${GST1.0_INCLUD
 
 catkin_package()
 
-add_executable(audio_play src/audio_play.cpp)
-target_link_libraries(audio_play ${catkin_LIBRARIES} ${GST1.0_LIBRARIES} ${Boost_LIBRARIES}) 
-add_dependencies(audio_play ${catkin_EXPORTED_TARGETS})
+add_executable(rode_play src/rode_play.cpp)
+target_link_libraries(rode_play ${catkin_LIBRARIES} ${GST1.0_LIBRARIES} ${Boost_LIBRARIES}) 
+add_dependencies(rode_play ${catkin_EXPORTED_TARGETS})
 
-install(TARGETS audio_play 
+add_executable(rode_play src/audio_play.cpp)
+target_link_libraries(audio_play ${catkin_LIBRARIES} ${GST1.0_LIBRARIES} ${Boost_LIBRARIES}) 
+add_dependencies(audio ${catkin_EXPORTED_TARGETS})
+
+install(TARGETS rode_play 
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 install(DIRECTORY launch
